add logo at both ends and make sidebar transparent

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <h1>भारत को जानो</h1>
             <p>भारत विकास परिषद शाखा डबरा</p>
         </div>
+        <img src="logo-rbg.png" alt="Logo" class="logo">
     </nav>
     <!-- <div class="container"> -->
         <aside class="sidebar">
@@ -45,9 +46,9 @@
                 <br><br>
                 <li><a href="#audio">Audio Round</a></li>
                 <br><br>
-                <li><a href="#fastest">Fastest Round</a></li>
+                <li><a href="#fastest">Fastest Finger First Round</a></li>
                 <br><br>
-                <li><a href="#bonus">Bonus Round</a></li>
+                <li><a href="#bonus">Box Round</a></li>
                 <br><br>
             </ul>
         </aside>
