--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
                 <!-- <button id="next-question-btn">Next Question</button> -->
             </main>
         </div>
+        <div class="footer">
+            <p><span id="copyright">&copy;</span> <span id="year"></span> All Rights Reserved to Aryan Biswari.</p>
+          </div>
         
     <!-- </div> -->
     <script src="script.js"></script>
