add swami ji image in background and also fix the scrollbar

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="logo-rbg.png" type="image/png">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
     <link rel="stylesheet" href="style.css">
     <title>भारत को जानो || भारत विकास परिषद शाखा डबरा</title>
 </head>
@@ -35,7 +34,7 @@
                 <a href="#group">Group Round</a>
                 <ul class="dropdown-content">
                     <li><a href="#patiance">Patiance</a></li>
-                    <li><a href="#sanskriti">Sanskriti</a></li>
+                    <li><a href="#khel">Khel</a></li>
                     <li><a href="#rajnitii">Rajnitii</a></li>
                 </ul>
             </li>
