increase size of para-header and remove bg-image

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
 
             <h1>भारत को जानो</h1>
-            <p>भारत विकास परिषद शाखा डबरा</p>
+            <p class="para-header">भारत विकास परिषद शाखा डबरा</p>
         </div>
         <img src="logo-rbg.png" alt="Logo" class="logo">
     </nav>
