add dropdown in picture,video,audio and also make options in group rounds.

--- a/index.html
+++ b/index.html
@@ -33,17 +33,56 @@
             <li class="dropdown">
                 <a href="#group">Group Round</a>
                 <ul class="dropdown-content">
-                    <li><a href="#patiance">Patiance</a></li>
-                    <li><a href="#khel">Khel</a></li>
-                    <li><a href="#rajnitii">Rajnitii</a></li>
+                    <li><a href="#patianceA">Patiance A</a></li>
+                    <li><a href="#patianceB">Patiance B</a></li>
+                    <li><a href="#patianceC">Patiance C</a></li>
+                    <li><a href="#patianceD">Patiance D</a></li>
+                    <li><a href="#patianceE">Patiance E</a></li>
+                    <li><a href="#khelA">Khel A</a></li>
+                    <li><a href="#khelB">Khel B</a></li>
+                    <li><a href="#khelC">Khel C</a></li>
+                    <li><a href="#khelD">Khel D</a></li>
+                    <li><a href="#khelE">Khel E</a></li>
+                    <li><a href="#rajnitiiA">Rajnitii A</a></li>
+                    <li><a href="#rajnitiiB">Rajnitii B</a></li>
+                    <li><a href="#rajnitiiC">Rajnitii C</a></li>
+                    <li><a href="#rajnitiiD">Rajnitii D</a></li>
+                    <li><a href="#rajnitiiE">Rajnitii E</a></li>
                 </ul>
             </li>
 
-            <li><a href="#picture">Picture Round</a></li>
+            <li class="dropdown">
+                <a href="#picture">Picture Round</a>
+                <ul class="dropdown-content">
+                    <li><a href="#pictureA">Picture A</a></li>
+                    <li><a href="#pictureB">Picture B</a></li>
+                    <li><a href="#pictureC">Picture C</a></li>
+                    <li><a href="#pictureD">Picture D</a></li>
+                    <li><a href="#pictureE">Picture E</a></li>
+                </ul>
+            </li>
 
-            <li><a href="#video">Video Round</a></li>
+            <li class="dropdown">
+                <a href="#video">Video Round</a>
+                <ul class="dropdown-content">
+                    <li><a href="#videoA">Video A</a></li>
+                    <li><a href="#videoB">Video B</a></li>
+                    <li><a href="#videoC">Video C</a></li>
+                    <li><a href="#videoD">Video D</a></li>
+                    <li><a href="#videoE">Video E</a></li>
+                </ul>
+            </li>
 
-            <li><a href="#audio">Audio Round</a></li>
+            <li class="dropdown">
+                <a href="#audio">Audio Round</a>
+                <ul class="dropdown-content">
+                    <li><a href="#audioA">Audio A</a></li>
+                    <li><a href="#audioB">Audio B</a></li>
+                    <li><a href="#audioC">Audio C</a></li>
+                    <li><a href="#audioD">Audio D</a></li>
+                    <li><a href="#audioE">Audio E</a></li>
+                </ul>
+            </li>
 
             <li><a href="#fastest">Fastest Finger First Round</a></li>
 
