--- a/index.html
+++ b/index.html
@@ -23,68 +23,68 @@
     <aside class="sidebar">
 
         <ul id="round-list">
-            <li><a href="#default">Welcome Round</a></li>
+            <li><a href="#default">वेलकम राउंड</a></li>
 
-            <li><a href="#elimination">Elimination Round</a></li>
+            <li><a href="#elimination">एलिमिनेशन राउंड</a></li>
 
-            <li><a href="#passing">Passing Round</a></li>
+            <li><a href="#passing">पासिंग राउंड</a></li>
 
 
             <li class="dropdown">
-                <a href="#group">Group Round</a>
+                <a href="#group">ग्रुप राउंड</a>
                 <ul class="dropdown-content">
-                    <li><a href="#patianceA">Patiance A</a></li>
-                    <li><a href="#patianceB">Patiance B</a></li>
-                    <li><a href="#patianceC">Patiance C</a></li>
-                    <li><a href="#patianceD">Patiance D</a></li>
-                    <li><a href="#patianceE">Patiance E</a></li>
-                    <li><a href="#khelA">Khel A</a></li>
-                    <li><a href="#khelB">Khel B</a></li>
-                    <li><a href="#khelC">Khel C</a></li>
-                    <li><a href="#khelD">Khel D</a></li>
-                    <li><a href="#khelE">Khel E</a></li>
-                    <li><a href="#rajnitiiA">Rajnitii A</a></li>
-                    <li><a href="#rajnitiiB">Rajnitii B</a></li>
-                    <li><a href="#rajnitiiC">Rajnitii C</a></li>
-                    <li><a href="#rajnitiiD">Rajnitii D</a></li>
-                    <li><a href="#rajnitiiE">Rajnitii E</a></li>
+                    <li><a href="#patianceA">धैर्य A</a></li>
+                    <li><a href="#patianceB">धैर्य B</a></li>
+                    <li><a href="#patianceC">धैर्य C</a></li>
+                    <li><a href="#patianceD">धैर्य D</a></li>
+                    <li><a href="#patianceE">धैर्य E</a></li>
+                    <li><a href="#khelA">खेल A</a></li>
+                    <li><a href="#khelB">खेल B</a></li>
+                    <li><a href="#khelC">खेल C</a></li>
+                    <li><a href="#khelD">खेल D</a></li>
+                    <li><a href="#khelE">खेल E</a></li>
+                    <li><a href="#rajnitiiA">राजनीति A</a></li>
+                    <li><a href="#rajnitiiB">राजनीति B</a></li>
+                    <li><a href="#rajnitiiC">राजनीति C</a></li>
+                    <li><a href="#rajnitiiD">राजनीति D</a></li>
+                    <li><a href="#rajnitiiE">राजनीति E</a></li>
                 </ul>
             </li>
 
             <li class="dropdown">
-                <a href="#picture">Picture Round</a>
+                <a href="#picture">पिक्चर राउंड</a>
                 <ul class="dropdown-content">
-                    <li><a href="#pictureA">Picture A</a></li>
-                    <li><a href="#pictureB">Picture B</a></li>
-                    <li><a href="#pictureC">Picture C</a></li>
-                    <li><a href="#pictureD">Picture D</a></li>
-                    <li><a href="#pictureE">Picture E</a></li>
+                    <li><a href="#pictureA">पिक्चर A</a></li>
+                    <li><a href="#pictureB">पिक्चर B</a></li>
+                    <li><a href="#pictureC">पिक्चर C</a></li>
+                    <li><a href="#pictureD">पिक्चर D</a></li>
+                    <li><a href="#pictureE">पिक्चर E</a></li>
                 </ul>
             </li>
 
             <li class="dropdown">
-                <a href="#video">Video Round</a>
+                <a href="#video">वीडियो राउंड</a>
                 <ul class="dropdown-content">
-                    <li><a href="#videoA">Video A</a></li>
-                    <li><a href="#videoB">Video B</a></li>
-                    <li><a href="#videoC">Video C</a></li>
-                    <li><a href="#videoD">Video D</a></li>
-                    <li><a href="#videoE">Video E</a></li>
+                    <li><a href="#videoA">वीडियो A</a></li>
+                    <li><a href="#videoB">वीडियो B</a></li>
+                    <li><a href="#videoC">वीडियो C</a></li>
+                    <li><a href="#videoD">वीडियो D</a></li>
+                    <li><a href="#videoE">वीडियो E</a></li>
                 </ul>
             </li>
 
             <li class="dropdown">
-                <a href="#audio">Audio Round</a>
+                <a href="#audio">ऑडियो राउंड</a>
                 <ul class="dropdown-content">
-                    <li><a href="#audioA">Audio A</a></li>
-                    <li><a href="#audioB">Audio B</a></li>
-                    <li><a href="#audioC">Audio C</a></li>
-                    <li><a href="#audioD">Audio D</a></li>
-                    <li><a href="#audioE">Audio E</a></li>
+                    <li><a href="#audioA">ऑडियो A</a></li>
+                    <li><a href="#audioB">ऑडियो B</a></li>
+                    <li><a href="#audioC">ऑडियो C</a></li>
+                    <li><a href="#audioD">ऑडियो D</a></li>
+                    <li><a href="#audioE">ऑडियो E</a></li>
                 </ul>
             </li>
 
-            <li><a href="#fastest">Fastest Finger First Round</a></li>
+            <li><a href="#fastest">फास्टेस्ट फिंगर फर्स्ट राउंड</a></li>
 
             <!-- <li><a href="#bonus">Box Round</a></li> -->
 
