add some new files and also improve the performance

--- a/index.html
+++ b/index.html
@@ -38,16 +38,19 @@
                     <li><a href="#patianceC">धैर्य C</a></li>
                     <li><a href="#patianceD">धैर्य D</a></li>
                     <li><a href="#patianceE">धैर्य E</a></li>
+                    <li><a href="#patianceF">धैर्य F</a></li>
                     <li><a href="#khelA">खेल A</a></li>
                     <li><a href="#khelB">खेल B</a></li>
                     <li><a href="#khelC">खेल C</a></li>
                     <li><a href="#khelD">खेल D</a></li>
                     <li><a href="#khelE">खेल E</a></li>
+                    <li><a href="#khelF">खेल F</a></li>
                     <li><a href="#rajnitiiA">राजनीति A</a></li>
                     <li><a href="#rajnitiiB">राजनीति B</a></li>
                     <li><a href="#rajnitiiC">राजनीति C</a></li>
                     <li><a href="#rajnitiiD">राजनीति D</a></li>
                     <li><a href="#rajnitiiE">राजनीति E</a></li>
+                    <li><a href="#rajnitiiF">राजनीति F</a></li>
                 </ul>
             </li>
 
@@ -59,6 +62,7 @@
                     <li><a href="#pictureC">पिक्चर C</a></li>
                     <li><a href="#pictureD">पिक्चर D</a></li>
                     <li><a href="#pictureE">पिक्चर E</a></li>
+                    <li><a href="#pictureF">पिक्चर F</a></li>
                 </ul>
             </li>
 
@@ -70,6 +74,7 @@
                     <li><a href="#videoC">वीडियो C</a></li>
                     <li><a href="#videoD">वीडियो D</a></li>
                     <li><a href="#videoE">वीडियो E</a></li>
+                    <li><a href="#videoF">वीडियो F</a></li>
                 </ul>
             </li>
 
@@ -81,6 +86,7 @@
                     <li><a href="#audioC">ऑडियो C</a></li>
                     <li><a href="#audioD">ऑडियो D</a></li>
                     <li><a href="#audioE">ऑडियो E</a></li>
+                    <li><a href="#audioF">ऑडियो F</a></li>
                 </ul>
             </li>
 
@@ -109,10 +115,10 @@
 
         </main>
     </div>
-    <div class="footer">
+    <!-- <div class="footer">
         <p><span id="copyright-symbol">&copy;</span> <span id="year"></span> All Rights Reserved to Aryan Biswari.</p>
-    </div>
-    <div class="modal" id="copyright-modal">
+    </div> -->
+    <!-- <div class="modal" id="copyright-modal">
         <div class="modal-content">
             <span class="close" id="close-modal">&times;</span>
             <h2>Copyright Information</h2>
@@ -145,7 +151,7 @@
                 the terms and conditions set by the respective third-party content owners.
             </p>
         </div>
-    </div>
+    </div> -->
 
     <script src="script.js"></script>
 </body>
