add elimination round questions

--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
 
         </main>
     </div>
-    <div class="footer">
+    <!-- <div class="footer">
         <p><span id="copyright-symbol">&copy;</span> <span id="year"></span> All Rights Reserved to Aryan Biswari.</p>
-    </div>
-    <div class="modal" id="copyright-modal">
+    </div> -->
+    <!-- <div class="modal" id="copyright-modal">
         <div class="modal-content">
             <span class="close" id="close-modal">&times;</span>
             <h2>Copyright Information</h2>
@@ -145,7 +145,7 @@
                 the terms and conditions set by the respective third-party content owners.
             </p>
         </div>
-    </div>
+    </div> -->
 
     <script src="script.js"></script>
 </body>
