add previous question button and now you can control questions with keyboard

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
             </div>
             <div class="button-container">
                 <button id="show-ans-btn">Show Answer</button>
+                <button id="previous-question-btn">Previous Question</button>
                 <button id="next-question-btn">Next Question</button>
 
             </div>
